fixed flexbox column thing on footer, working out margin or spacing

--- a/assets/stylesheets/core/_layout.scss
+++ b/assets/stylesheets/core/_layout.scss
@@ -171,10 +171,12 @@ a:hover {
 
   .parent {
     flex-flow: column wrap;
+    align-items: start;
   }
 
-  .left {
-    align-items: flex-start;
+  footer a {
+    margin: 0;
+    padding: 0;
   }
 
  }
